--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <mysql.version>8.0.33</mysql.version>
         <gson.version>2.10.1</gson.version>
         <junit.version>5.10.1</junit.version>
+        <sonar.exclusions>**/*.css</sonar.exclusions>
     </properties>
 
     <dependencies>
