--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <gson.version>2.10.1</gson.version>
         <junit.version>5.10.1</junit.version>
         <sonar.exclusions>**/*.css</sonar.exclusions>
+        <sonar.organization>pippetto17</sonar.organization>
     </properties>
 
     <dependencies>
