--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,12 @@
         <mysql.version>8.0.33</mysql.version>
         <gson.version>2.10.1</gson.version>
         <junit.version>5.10.1</junit.version>
-        <sonar.exclusions>**/*.css</sonar.exclusions>
+        <sonar.exclusions>**/*.css,**/view/**/*.java,**/org/example/*.java</sonar.exclusions>
+        <sonar.coverage.exclusions>**/view/**/*.java,**/org/example/*.java</sonar.coverage.exclusions>
+        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+        <sonar.language>java</sonar.language>
         <sonar.organization>pippetto17</sonar.organization>
     </properties>
 
@@ -137,6 +142,12 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.11</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/view/**/*</exclude>
+                        <exclude>**/org/example/**/*</exclude>
+                    </excludes>
+                </configuration>
                 <executions>
                     <execution>
                         <id>prepare-agent</id>
@@ -150,6 +161,26 @@
                         <goals>
                             <goal>report</goal>
                         </goals>
+                    </execution>
+                    <execution>
+                        <id>jacoco-check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <rule>
+                                    <element>BUNDLE</element>
+                                    <limits>
+                                        <limit>
+                                            <counter>LINE</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.80</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
