--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
             <version>${javafx.version}</version>
         </dependency>
 
+        <!-- AtlantaFX for Modern UI -->
+        <dependency>
+            <groupId>io.github.mkpaz</groupId>
+            <artifactId>atlantafx-base</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
         <!-- JUnit for testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
